2010-10-05  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Complex text rendering does not render custom fonts
        https://bugs.webkit.org/show_bug.cgi?id=41091

        Added a layout test that verifies that custom fonts are rendered with
        the correct font when hitting the complex text code path.

        * platform/gtk/fonts/font-face-with-complex-text-expected.checksum: Added.
        * platform/gtk/fonts/font-face-with-complex-text-expected.png: Added.
        * platform/gtk/fonts/font-face-with-complex-text-expected.txt: Added.
        * platform/gtk/fonts/font-face-with-complex-text.html: Added.
        * platform/gtk/fonts/resources/Ahem.ttf: Copied from LayoutTests/fast/css/resources/Ahem.ttf.
2010-10-05  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Complex text rendering does not render custom fonts
        https://bugs.webkit.org/show_bug.cgi?id=41091

        For fonts that do not have a FontConfig pattern (including custom
        fonts), fall back to the simple text rendering path. This is a work-
        -around for not supporting Pango rendering with non-FontConfig fonts.

        Test: platform/gtk/fonts/font-face-with-complex-text.html

        * platform/graphics/gtk/FontGtk.cpp:
        (WebCore::Font::drawComplexText): Fall back to the simple path for custom fonts.
        (WebCore::Font::floatWidthForComplexText): Ditto.
        (WebCore::Font::offsetForPositionForComplexText): Ditto.
        (WebCore::Font::selectionRectForComplexText): Ditto.

Canonical link: https://commits.webkit.org/59724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69117 268f45cc-cd09-0410-ab3c-d52691b4dbfc